--- a/Wargame/BattleForm.resx
+++ b/Wargame/BattleForm.resx
@@ -120,4 +120,14 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="textBox1.Text" xml:space="preserve">
+    <value>Welcome to Wargame. 
+
+Wargame is a simple generic fantasy game to practice .NET and C#. Characters play in initiative order, attacking a random opponent until all players on one team are dead.  To begin a new game, player must first go to the Roster Management screen and draft their team.  Players can use gold to purchase items from the vendor to increase their stats.  Winning games will increase players gold.  
+
+How many games can you win? </value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
 </root>
